<resources>
    <string name="app_name" translatable="false">ArriveCan</string>
    <string name="sign_in_to_arrivecan">Sign in to ArriveCan</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="start">Start</string>
    <string name="get_started_on_your_arrivecan_form">Get started on your ArriveCAN form</string>
    <string name="what_best_describe_you_or_your_primary_reason_for_entering_canada">What best describe you or your primary reason for entering Canada?</string>
    <string name="if_you_include_other_workers_in_your_declaration_they_must_have_the_same_reason_for_entry">If you include other workers in your declaration, they must have the same reason for entry.</string>
    <string name="canadian_citizen_or_permanent_resident">Canadian citizen or permanent resident</string>
    <string name="essential_reasons_related_to_work_or_school">Essential reasons related to work or school</string>
    <string name="discretionary_travel_for_tourism_leisure_and_recreation">Discretionary travel (for tourism, leisure, and recreation)</string>
    <string name="international_student_with_a_valid_visa">International student with a valid visa</string>
    <string name="compassionate_entry_e_g_taking_care_of_a_sick_family_member_providing_end_of_life_support_or_attending_a_funeral">Compassionate entry (e.g. taking care of a sick family member, providing end-of-life support, or attending a funeral).</string>
    <string name="family_reunification_to_reunite_with_an_immediate_or_extended_family_member">Family reunification (to reunite with an immediate or extended family member).</string>
    <string name="other_reasons_not_described_in_the_above_options">Other reasons not described in the above options.</string>
    <string name="next">Next</string>
    <string name="how_are_you_entering_into_canada">How are you entering into Canada?</string>
    <string name="select_from_one_the_following">Select from one the following:</string>
    <string name="entry_by_air">Entry By Air</string>
    <string name="entry_by_land">Entry By Land</string>
    <string name="entry_by_marine">Entry By Marine</string>
    <string name="air_travellers_please_note_the_following">Air travellers, please note the following:</string>
    <string name="on_arrival_to_canada_you_may_be_required_to_take_a_covid_19_test_you_are_asked_to_register_in_advance_for_your_covid_19_test_preregistration_will_speed_up_your_testing_experience">On arrival to Canada, you may be required to take a COVID-19 test. You are asked to register in advance for your COVID-19 test. Preregistration will speed up your testing experience.</string>
    <string name="travellers_selected_for_testing_must_complete_their_arrival_test_as_soon_as_possible_follow_any_other_instructions_provided_more_information_on_arrival_testing_is_available_at_covid_19_travel_testing_and_borders">Travellers selected for testing must complete their arrival test as soon as possible. Follow any other instructions provided. More information on arrival testing is available at COVID-19: Travel, testing and borders.</string>
    <string name="your_flight_into_canada">Your Flight Into Canada</string>
    <string name="enter_the_details_of_your_planned_arrival_to_canada">Enter the details of your planned arrival to Canada</string>
    <string name="within_the_next_72_hours_3_days">within the next 72 hours (3 days).</string>
    <string name="if_your_trip_is_not_within_the_next_72_hours_come_back_and_complete_your_submission_later">If your trip is not within the next 72 hours, come back and complete your submission later.</string>
    <string name="see_the_list_of_airports">See the list of airports</string>
    <string name="indicates_a_required_field">indicates a required field</string>
    <string name="country_of_original_departure">Country of original departure</string>
    <string name="this_is_the_last_country_you_stayed_inor_visited_prior_to_your_flight_to_canada">This is the last country you stayed in or visited prior to your flight to Canada</string>
    <string name="arrival_airport">Arrival airport</string>
    <string name="airline">Airline</string>
    <string name="flight_number">Flight number</string>
    <string name="date_of_arrival">Date of Arrival</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_the_details_of_your_planned_arrival_to_canada_within_the_next_72_hours_3_days">Enter the details of your planned arrival to Canada within the next 72 hours (3 days).</string>
    <string name="click_here_to_see_the_list_of_airports">Click here to see the list of airports.</string>
    <string name="this_is_the_last_country_you_stayed_in_or_visited_prior_to_your_flight_to_canada">This is the last country you stayed in or visited prior to your flight to Canada.</string>
    <string name="traveller_details">Traveller Details</string>
    <string name="add_your_details_here_if_you_are_travelling_as_part_of_a_family_or_group_you_can_multiple_travellers_after">Add your details here. If you are travelling as part of a family or group, you can multiple travellers after.</string>
    <string name="surname">Surname</string>
    <string name="given_name">Given Name</string>
    <string name="initial_middle_name_optional">Initial/Middle Name (Optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="travel_document">Travel Document</string>
    <string name="select_the_document_type">Select the document type:</string>
    <string name="document_type">Document Type</string>
    <string name="country_of_issue">Country of Issue</string>
    <string name="document_number">Document Number</string>
    <string name="proof_of_vaccination">Proof of Vaccination</string>
    <string name="will_you_provide_proof_that_your_are_fully_vaccinated_against_covid_19">Will you provide proof that your are fully vaccinated against COVID-19?</string>
    <string name="example">Example</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_unable_to_receive_a_vaccine_for_medical_reasons">Are you unable to receive a vaccine for medical reasons?</string>


    <string-array name="documentList">
        <item>Passport</item>
        <item>NEXUS card</item>
        <item>Permanent Resident card</item>
        <item>Birth certificate</item>
    </string-array>

    <string-array name="nombre_dose">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="vaccine_list">
        <item>Pfizer-BioNTech</item>
        <item>Moderna</item>
        <item>AstraZeneca</item>
        <item>Johnson &amp; Johnson</item>
        <item>Novavax</item>
        <item>Sinovac</item>
    </string-array>

    <string-array name="country_list">
        <item>Canada</item>
        <item>United States</item>
        <item>Mexico</item>
        <item>France</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>United-Kingdom</item>
        <item>Brazil</item>
        <item>India</item>
        <item>China</item>
        <item>Russia</item>
        <item>Australia</item>
        <item>Spain</item>
        <item>Italy</item>
        <item>South Korea</item>
    </string-array>
</resources>