<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".TransportActivity">

    <TextView
        android:id="@+id/transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/how_are_you_entering_into_canada"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/select_entry_mode_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textAlignment="textStart"
        android:text="@string/select_from_one_the_following"/>

    <RadioGroup
        android:id="@+id/entry_mode_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/entry_by_air_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_by_air"
            android:textAlignment="center"
            android:drawableLeft="@drawable/avion"
            android:layout_marginTop="20dp"/>

        <RadioButton
            android:id="@+id/entry_by_land_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_by_land"
            android:textAlignment="center"
            android:drawableLeft="@drawable/land"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/entry_by_marine_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_by_marine"
            android:textAlignment="center"
            android:drawableLeft="@drawable/boat"
            android:layout_marginTop="20dp" />

    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:backgroundTint="#2d79a4"
        android:onClick="clickEnter"
        android:text="Next" />

</LinearLayout>
