<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_flight_into_canada"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#103C51"/>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#5c5b58"
            android:text="@string/enter_the_details_of_your_planned_arrival_to_canada" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/within_the_next_72_hours_3_days"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#5c5b58" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#5c5b58"
            android:text="@string/if_your_trip_is_not_within_the_next_72_hours_come_back_and_complete_your_submission_later" />

        <!-- Link textview -->

        <!-- Required textview -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:onClick="onAirportsLinkClicked"
            android:text="@string/see_the_list_of_airports"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#5c5b58"
            android:textColorLink="#0000FF" />

        <TextView
            android:id="@+id/asterix1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicates_a_required_field"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#5c5b58"/>

        <!-- pays d'origine textview -->
        <TextView
            android:id="@+id/asterix2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_of_original_departure"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="#5c5b58"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_the_last_country_you_stayed_inor_visited_prior_to_your_flight_to_canada"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="24dp"/>

        <!-- TextInputLayout with EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Country name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Arrival airport -->
        <TextView
            android:id="@+id/asterix3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrival_airport"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="#5c5b58"/>

        <!-- TextInputLayout with EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Airline-->
        <TextView
            android:id="@+id/asterix4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/airline"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="#5c5b58"/>

        <!-- TextInputLayout with EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Flight number-->
        <TextView
            android:id="@+id/asterix5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flight_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="#5c5b58"/>

        <!-- TextInputLayout with EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of Arrival-->
        <TextView
            android:id="@+id/asterix6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_arrival"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="#5c5b58"/>

        <!-- TextInputLayout with EditText -->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/date_input"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <DatePicker-->
<!--                    android:id="@+id/date_picker"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

<!--                <TimePicker-->
<!--                    android:id="@+id/time_picker"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

<!--            </LinearLayout>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

    </LinearLayout>

</ScrollView>