<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dateBirth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Contact_Info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/add_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/traveller_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#103C51"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_details_here_if_you_are_travelling_as_part_of_a_family_or_group_you_can_multiple_travellers_after"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#5c5b58" />

        <!-- Surname -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_surname2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Given name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_given_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/given_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_given_name2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Middle name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/initial_middle_name_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_middle2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of birth -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_of_birth"
            app:endIconDrawable="@drawable/calendar2"
            app:endIconMode="custom"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_date2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Travel document-->
        <TextView
            android:id="@+id/title_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/travel_document"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#103C51"
            android:textStyle="bold" />

        <!-- Document type-->
        <TextView
            android:id="@+id/title_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_the_document_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#5c5b58"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doc_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:hint="@string/document_type"
            android:textColorHint="@color/black"
            android:background="@drawable/border">

            <Spinner
                android:id="@+id/doc_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:entries="@array/documentList"
                android:verticalScrollbarPosition="defaultPosition" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Country -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/country_of_issue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/country2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Document #-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doc_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/document_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/doc_num2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Next Button -->
        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:backgroundTint="#2d79a4"
            android:onClick="btnContact"
            android:text="Next"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>